<resources>
    <string name="app_name">My Application</string>

    <!-- Strings related to login -->
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_username">This username is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="account_creation_text"><u>Account Creation</u></string>
    <string name="password_text"><u>Password</u></string>
    <string name="username_text"><u>Username</u></string>
    <string name="first_name_text"><u>First Name</u></string>
    <string name="last_name_text"><u>Last Name</u></string>
    <string name="create_account_text">Create Account</string>
    <string name="login_button">Login</string>
    <string name="create_new_account_button">Create new account</string>
    <string name="welcome_text"><u>WELCOME!</u></string>
    <string name="animals_text">Animals</string>
    <string name="arts_crafts_text"><![CDATA[Arts & Crafts]]></string>
    <string name="agriculture_text">Agriculture</string>
    <string name="archaeology_text">Archaeology</string>
    <string name="aviation_text">Aviation</string>
    <string name="biology_text">Biology</string>
    <string name="bird_watching_text">Bird Watching</string>
    <string name="bombs_text">Bombs</string>
    <string name="collecting_text">Collecting</string>
    <string name="competition_text">Competition</string>
    <string name="crime_true_text">Crime (True)</string>
    <string name="culture_text">Culture</string>
    <string name="current_events_text">Current Events</string>
    <string name="dance_text">Dance</string>
    <string name="dating_text">Dating</string>
    <string name="dermatology_text">Dermatology</string>
    <string name="disease_text">Disease</string>
    <string name="doctors_text">Doctors</string>
    <string name="drama_text">Drama</string>
    <string name="ecology_text">Ecology</string>
    <string name="economics_text">Economics</string>
    <string name="education_text">Education</string>
    <string name="engineering_text">Engineering</string>
    <string name="evolution_text">Evolution</string>
    <string name="fitness_text">Fitness</string>
    <string name="flags_text">Flags</string>
    <string name="flowers_text">Flowers</string>
    <string name="food_text">Food</string>
    <string name="fund_raising_text">Fund Raising</string>
    <string name="games_text">Games</string>
    <string name="gardens_gardening_text">Gardens/Gardening</string>
    <string name="geography_text">Geography</string>
    <string name="government_text">Government</string>
    <string name="guns_text">Guns</string>
    <string name="health_text">Health</string>
    <string name="history_text">History</string>
    <string name="hobbies_text">Hobbies</string>
    <string name="insects_text">Insects</string>
    <string name="books_text">Books</string>
    <string name="writing_text">Writing</string>
    <string name="investing_text">Investing</string>
    <string name="law_enforcement_text">Law Enforcement</string>
    <string name="lunch_outings_text">Lunch Outings</string>
    <string name="magic_text">Magic</string>
    <string name="medicine_text">Medicine</string>
    <string name="military_text">Military</string>
    <string name="movies_text">Movies</string>
    <string name="music_text">Music</string>
    <string name="nature_text">Nature</string>
    <string name="parties_text">Parties</string>
    <string name="politics_text">Politics</string>
    <string name="religion_text">Religion</string>
    <string name="sight_seeing_text">Sight Seeing</string>
    <string name="sports_text">Sports</string>
    <string name="technology_text">Technology</string>
    <string name="the_colonnades_text">The Colonnades</string>
    <string name="theater_text">Theater</string>
    <string name="travel_text">Travel</string>
    <string name="uva_text">UVA</string>
    <string name="volunteering_text">Volunteering</string>
    <string name="weather_text">Weather</string>
    <string name="wine_text">Wine</string>
    <string name="my_likes_text"><u>My Likes</u></string>
    <string name="set_likes_text">Set Likes</string>
    <string name="set_my_likes_text">Set My Likes</string>
    <string name="main_menu_text"><u>Main Menu</u></string>
    <string name="my_likes">My Likes</string>
    <string name="create_new_event">Create New Event</string>
    <string name="logout_text">Logout</string>
    <string name="my_events_text">My Events</string>
    <string name="find_events_button_text">Find Events</string>

    <string name="find_events_text"><u>Find Events</u></string>
    <string name="event1_button">Bird Watching | 12/07/2016 | 8:00 AM EST</string>
    <string name="event2_button">IT Seminar | 12/10/2016 | 1:30 PM EST</string>

    <string name="create_new_event_text"><u>Create New Event</u></string>
    <string name="event_name_text"><u>Event Name</u></string>
    <string name="event_details_text"><u>Event Details</u></string>
    <string name="birdwatching_text">Bird Watching</string>
    <string name="attend1_button">Attend</string>
    <string name="birdwatching_desc_text">Bird watching is a great way to get outside and envelop yourself in what natures has best to offer. Please join us for a great morning, it will be beautiful!</string>
    <string name="birdwatching_desc2_text">WHERE: Building 2 Parking Lot \nWHEN: 8:00 AM \nCREATED BY: Mason, Judy</string>
    <string name="category_text"><u>Category</u></string>
    <string name="location_text"><u>Location</u></string>
    <string name="date_text"><u>Date</u></string>
    <string name="time_text"><u>Time</u></string>
    <string name="name_text"></string>
    <string name="create_event_text">Create Event</string>
    <string name="date_format_hint_text">(xx/xx/xx)</string>
    <string name="time_hint_text">(xx:xx(am/pm))</string>
    <string name="create_event_btn_text">Create Event</string>
    <string name="event_description_text"><u>Description</u></string>
    <string name="hint_for_capactiy">Max # of Guests</string>
    <string name="event_capactiy"><u>Capactiy</u></string>
    <string name="my_events_screen"><u>My Events</u></string>

</resources>
