<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main_menu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.jkast.myapplication.MainMenu">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="1dp"
        android:id="@+id/mainmenulayout"
        android:layout_marginTop="105dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <Button
            android:text="@string/find_events_button_text"
            android:onClick="findEventsButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/mm_search_events"
            android:textSize="25sp"
            android:background="@android:color/holo_blue_dark" />

        <Button
            android:text="@string/create_new_event"
            android:onClick="createNewEventButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/mm_create_new_event"
            android:textSize="25sp"
            android:layout_marginTop="25dp"
            android:background="@android:color/holo_blue_dark" />

        <Button
            android:text="@string/my_events_text"
            android:onClick="myEventsButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/mm_my_events"
            android:textSize="25sp"
            android:layout_marginTop="25dp"
            android:background="@android:color/holo_blue_dark" />

        <Button
            android:text="@string/my_likes_text"
            android:onClick="editMyLikes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/mm_mylikes_edit"
            android:textSize="25sp"
            android:layout_marginTop="25dp"
            android:background="@android:color/holo_blue_dark" />

    </LinearLayout>

    <Button
        android:text="@string/logout_text"
        android:onClick="logoutButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/mm_logout"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="46dp"
        android:textSize="25sp"
        android:background="@android:color/holo_red_light" />

    <TextView
        android:text="@string/main_menu_text"
        android:layout_width="381dp"
        android:layout_height="wrap_content"
        android:id="@+id/mainmenuview"
        android:textSize="50sp"
        android:layout_weight="0.36"
        android:textStyle="normal|bold"
        android:textColor="@android:color/black"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textAlignment="center" />

</RelativeLayout>
