<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_find_events"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.jkast.myapplication.FindEvents">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true">

        <TextView
            android:text="@string/find_events_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView2"
            android:textSize="48sp"
            android:textStyle="normal|italic"
            android:textAlignment="center"
            android:paddingBottom="20dp"
            android:drawableBottom="@android:drawable/divider_horizontal_textfield" />

        <Button
            android:text="@string/event1_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/birdwatching_event_button_id" />

        <Button
            android:text="@string/event2_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/it_seminar_event_button_id" />

    </LinearLayout>
</RelativeLayout>
